fixed social media icons on mobile

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ p {
 }
 
 #about-me {
-  margin-top: 115px;
+  margin-top: 70px;
   
 }
 
@@ -192,4 +192,10 @@ main a {
     margin-left: 0;
   }
   
+}
+
+@media only screen and (max-width: 433px){
+    main a{
+      font-size: 40px;
+    }
 }
